--- a/src/styles.css
+++ b/src/styles.css
@@ -40,3 +40,11 @@ body {
 .menu .menu-item:hover {
     background: #343434;
 }
+
+.timer-header {
+    font-size: 25px;
+}
+
+.timer-block {
+    font-size: 40px;
+}
